tests/baselines/reference/tsxSpreadAttributesResolution5.errors.txt
file.tsx(20,19): error TS2322: Type 'number' is not assignable to type '2'.
file.tsx(33,10): error TS2559: Type '{ prop1: boolean; }' has no properties in common with type 'IntrinsicAttributes & IntrinsicClassAttributes<EmptyProp> & { children?: ReactNode; }'.


==== file.tsx (2 errors) ====
    import React = require('react');
    
    interface PoisonedProp {
        x: string;
        y: 2;
    }
    
    class Poisoned extends React.Component<PoisonedProp, {}> {
        render() {
            return <div>Hello</div>;
        }
    }
    
    let obj = {
        x: "hello world",
        y: 2
    };
    
    // Error as "obj" has type { x: string; y: number }
    let p = <Poisoned {...obj} />;
                      ~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type '2'.
!!! related TS6500 file.tsx:5:5: The expected type comes from property 'y' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<Poisoned> & PoisonedProp & { children?: ReactNode; }'
    
    class EmptyProp extends React.Component<{}, {}> {
        render() {
            return <div>Default hi</div>;
        }
        greeting: string;
    }
    
    let o = {
        prop1: false
    }
    // Ok
    let e = <EmptyProp {...o} />;
             ~~~~~~~~~
!!! error TS2559: Type '{ prop1: boolean; }' has no properties in common with type 'IntrinsicAttributes & IntrinsicClassAttributes<EmptyProp> & { children?: ReactNode; }'.